main/objects/API_Dummy__c/API_Dummy__c.object-meta.xml
<CustomObject>
    <label>API Dummy</label>
    <nameField>
        <label>API Dummy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Dummies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>