main/objects/API_Dummy__c/fields/Calllout_Auth_Type__c.field-meta.xml
<CustomField>
    <fullName>Calllout_Auth_Type__c</fullName>
    <label>Calllout Auth Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Basic authentication</fullName>
            </value>
            <value>
                <fullName>OAuth 2.0</fullName>
            </value>
            <value>
                <fullName>Bearer token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>