main/objects/API_Dummy__c/fields/Callout_Body__c.field-meta.xml
<CustomField>
    <fullName>Callout_Body__c</fullName>
    <label>Callout Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>