main/objects/API_Dummy__c/fields/Callout_Client_ID__c.field-meta.xml
<CustomField>
    <fullName>Callout_Client_ID__c</fullName>
    <label>Callout Client ID</label>
    <type>TextArea</type>
</CustomField>