main/objects/API_Dummy__c/fields/Callout_Client_secreat__c.field-meta.xml
<CustomField>
    <fullName>Callout_Client_secreat__c</fullName>
    <label>Callout Client secreat</label>
    <type>TextArea</type>
</CustomField>