main/objects/API_Dummy__c/fields/Callout_Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Callout_Grant_type__c</fullName>
    <label>Callout Grant type</label>
    <type>TextArea</type>
</CustomField>