main/objects/API_Dummy__c/fields/Callout_Method__c.field-meta.xml
<CustomField>
    <fullName>Callout_Method__c</fullName>
    <label>Callout Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GET</fullName>
            </value>
            <value>
                <fullName>POST</fullName>
            </value>
            <value>
                <fullName>PUT</fullName>
            </value>
            <value>
                <fullName>DELETE</fullName>
            </value>
            <value>
                <fullName>PATCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>