main/objects/API_Dummy__c/fields/Callout_Password__c.field-meta.xml
<CustomField>
    <fullName>Callout_Password__c</fullName>
    <label>Callout Password</label>
    <type>TextArea</type>
</CustomField>