main/objects/API_Dummy__c/fields/Callout_Request_Time__c.field-meta.xml
<CustomField>
    <fullName>Callout_Request_Time__c</fullName>
    <label>Callout Request Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>