main/objects/API_Dummy__c/fields/Callout_Time_Diff__c.field-meta.xml
<CustomField>
    <fullName>Callout_Time_Diff__c</fullName>
    <formula>Diff_Filed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Callout Time Diff</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>