main/objects/API_Dummy__c/fields/Callout_Token__c.field-meta.xml
<CustomField>
    <fullName>Callout_Token__c</fullName>
    <label>Callout Token</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>