main/objects/API_Dummy__c/fields/Callout_UserName__c.field-meta.xml
<CustomField>
    <fullName>Callout_UserName__c</fullName>
    <label>Callout UserName</label>
    <type>TextArea</type>
</CustomField>