main/objects/API_Dummy__c/fields/Diff_Filed__c.field-meta.xml
<CustomField>
    <fullName>Diff_Filed__c</fullName>
    <label>Diff Filed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>