main/objects/API_Dummy__c/fields/EndpointURL__c.field-meta.xml
<CustomField>
    <fullName>EndpointURL__c</fullName>
    <label>EndpointURL</label>
    <type>TextArea</type>
</CustomField>